[gd_scene load_steps=9 format=3 uid="uid://cq5d747v4kt3w"]

[ext_resource type="Script" path="res://Game/Interface/NovaNet/nova_net.gd" id="1_bohbv"]
[ext_resource type="Script" path="res://Game/Interface/NovaNet/bots.gd" id="2_6fskv"]
[ext_resource type="PackedScene" uid="uid://bfre1ywod8qf8" path="res://Game/Interface/Icons/brain_icon.tscn" id="2_d8v8k"]
[ext_resource type="PackedScene" uid="uid://b2o66qawxrwjp" path="res://Game/Interface/Icons/gold_icon.tscn" id="3_wum2w"]
[ext_resource type="Texture2D" uid="uid://ci1iuld5c4kto" path="res://Game/Graphics/Common_icons/bot_full.png" id="4_65fmw"]
[ext_resource type="Texture2D" uid="uid://dbksensd5xpko" path="res://Game/Graphics/Common_icons/bot_neo_smiling.png" id="5_p114n"]
[ext_resource type="BitMap" uid="uid://5uko2lu4k1po" path="res://Game/Graphics/Common_icons/bot_full_mono.bmp" id="6_324lu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dq24p"]

[node name="NovaNet" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bohbv")
metadata/_edit_use_anchors_ = true

[node name="NovaNetTab" type="TabContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_dq24p")
tab_alignment = 1
current_tab = 0

[node name="Bots" type="VBoxContainer" parent="NovaNetTab"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_6fskv")
metadata/_tab_index = 0

[node name="HBoxContainer" type="HBoxContainer" parent="NovaNetTab/Bots"]
layout_mode = 2

[node name="NextBotPriceTitle" type="Label" parent="NovaNetTab/Bots/HBoxContainer"]
layout_mode = 2
text = "Prix du bot: "

[node name="NextBotPriceValue" type="Label" parent="NovaNetTab/Bots/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "x"

[node name="BrainIcon" parent="NovaNetTab/Bots/HBoxContainer" instance=ExtResource("2_d8v8k")]
layout_mode = 2

[node name="HBoxContainer2" type="VBoxContainer" parent="NovaNetTab/Bots"]
layout_mode = 2

[node name="GoldPerClickTitle" type="Label" parent="NovaNetTab/Bots/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "% Or investi par click"

[node name="HBoxContainer" type="HBoxContainer" parent="NovaNetTab/Bots/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="GoldInvestBox" type="HSlider" parent="NovaNetTab/Bots/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4
step = 10.0
value = 10.0
rounded = true
tick_count = 11

[node name="GoldInvestLabel" type="Label" parent="NovaNetTab/Bots/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8

[node name="GoldIcon" parent="NovaNetTab/Bots/HBoxContainer2/HBoxContainer" instance=ExtResource("3_wum2w")]
layout_mode = 2
size_flags_horizontal = 8

[node name="HBoxContainer4" type="HBoxContainer" parent="NovaNetTab/Bots"]
layout_mode = 2

[node name="KnowledgePerClickTitle" type="Label" parent="NovaNetTab/Bots/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
text = "Knowledge par click"

[node name="KnowledgePerClickValue" type="Label" parent="NovaNetTab/Bots/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="NovaNetTab/Bots"]
layout_mode = 2

[node name="NbOfClickTitle" type="Label" parent="NovaNetTab/Bots/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "Clic restants:"

[node name="NbOfClickValue" type="Label" parent="NovaNetTab/Bots/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "x"

[node name="CenterContainer" type="CenterContainer" parent="NovaNetTab/Bots"]
layout_mode = 2
size_flags_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ClickerARC" type="AspectRatioContainer" parent="NovaNetTab/Bots/CenterContainer"]
unique_name_in_owner = true
z_index = 90
custom_minimum_size = Vector2(450, 450)
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="ClickerBotButton" type="TextureButton" parent="NovaNetTab/Bots/CenterContainer/ClickerARC"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("4_65fmw")
texture_pressed = ExtResource("5_p114n")
texture_click_mask = ExtResource("6_324lu")
ignore_texture_size = true
stretch_mode = 0

[node name="RefreshTimer" type="Timer" parent="NovaNetTab/Bots"]
unique_name_in_owner = true
autostart = true

[connection signal="value_changed" from="NovaNetTab/Bots/HBoxContainer2/HBoxContainer/GoldInvestBox" to="NovaNetTab/Bots" method="_on_gold_invest_box_value_changed"]
[connection signal="pressed" from="NovaNetTab/Bots/CenterContainer/ClickerARC/ClickerBotButton" to="NovaNetTab/Bots" method="_on_click_bot_pressed"]
[connection signal="timeout" from="NovaNetTab/Bots/RefreshTimer" to="NovaNetTab/Bots" method="_on_refresh_timer_timeout"]
